--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="" />
 		<meta http-equiv="X-UA-Compatible" content="IE=7" />
 		<link rel="stylesheet" href="./style/main.css" />
+		<link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
 		<title>Nicholas Gould</title>
 	</head>
 	<body>
@@ -218,8 +219,10 @@
 				</div>
 			</section>
 			<section id="work" class="work-section">
+				<h1>WORK</h1>
+				<h1 class="bg-text">WORK</h1>
 				<div class="work-wrapper">
-					<div class="work-card anim-el anim-left">
+					<div class="work-card dark-item anim-el anim-left">
 						<div class="work-card-header">
 							<img src="./img/FPV Logo.svg" alt="Focus Point Visuals Logo" />
 							<h2>FOCUS POINT VISUALS</h2>
@@ -1014,7 +1017,7 @@
 							<div class="icon-bg"></div>
 						</div>
 						<h3>UI/UX Design</h3>
-						<div class="icons-collection">
+						<div class="icons-collection dark-item">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink"
