--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<nav>
 			<div class="nav-header">
-				<div class="appearance-toggle">
+				<div class="appearance-toggle dark-item">
 					<svg
 						xmlns="http://www.w3.org/2000/svg"
 						width="30"
@@ -23,14 +23,14 @@
 							id="toggle-bg"
 							class="dark-item"
 							d="M15,0A15,15,0,1,1,0,15,15,15,0,0,1,15,0Z"
-							fill="#272b2e"
+							fill="#fff"
 						/>
 						<path
 							class="dark-item"
 							id="toggle-moon"
 							d="M18.846,16.436c-.119,0-.239.008-.358.008a7.252,7.252,0,0,1-5.216-2.2,7.494,7.494,0,0,1-2.16-5.3,7.588,7.588,0,0,1,.72-3.237,10.722,10.722,0,0,1,.559-.963.162.162,0,0,0-.16-.251,7.956,7.956,0,0,0,1.213,15.8,7.755,7.755,0,0,0,5.961-2.8,7.514,7.514,0,0,0,.675-.9.166.166,0,0,0-.169-.251A7.025,7.025,0,0,1,18.846,16.436Z"
 							transform="translate(1.985 2.605)"
-							fill="#ffffff"
+							fill="#272b2e"
 						/>
 					</svg>
 				</div>
@@ -53,7 +53,7 @@
 				<div class="social-icons">
 					<ul>
 						<li>
-							<a href=""
+							<a href="https://github.com/nrgould" target="_blank"
 								><svg
 									xmlns="http://www.w3.org/2000/svg"
 									xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -87,7 +87,7 @@
 							></a>
 						</li>
 						<li>
-							<a href=""
+							<a href="https://instagram.com/nicholasgould1" target="_blank"
 								><svg
 									xmlns="http://www.w3.org/2000/svg"
 									xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -121,7 +121,7 @@
 							></a>
 						</li>
 						<li>
-							<a href=""
+							<a href="https://twitter.com/nrgould197" target="_blank"
 								><svg
 									xmlns="http://www.w3.org/2000/svg"
 									xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -155,7 +155,9 @@
 							></a>
 						</li>
 						<li>
-							<a href=""
+							<a
+								href="https://www.linkedin.com/in/nicholasgouldfpv/"
+								target="_blank"
 								><svg
 									xmlns="http://www.w3.org/2000/svg"
 									xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -228,6 +230,7 @@
 							<h2>FOCUS POINT VISUALS</h2>
 						</div>
 						<h3>Digital Marketing, Photography, Videography (2017-present)</h3>
+						<button class="read-more">Read More</button>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, qui
 							molestias iste voluptatibus voluptatum iure nulla facilis magnam
@@ -257,7 +260,7 @@
 							<div class="icon-bg"></div>
 						</div>
 						<h3>Web Development</h3>
-						<div class="icons-collection">
+						<div class="icons-collection dark-item">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink"
