--- a/index.html
+++ b/index.html
@@ -206,28 +206,32 @@
 		</nav>
 		<main>
 			<section class="hero-section">
-				<div class="hero-title dark-item">
-					<h1>Nicholas Gould</h1>
-					<h2>Front-End Development + Design</h2>
-				</div>
-				<div class="hero-anim dark-item">
-					<div class="box1 hero-boxes"></div>
-					<div class="box2 hero-boxes"></div>
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						width="317.177"
-						height="72.292"
-						viewBox="0 0 317.177 72.292"
-					>
-						<path
-							id="box-path"
-							d="M9529.287,490.908h316.177V562.2H9529.287Z"
-							transform="translate(-9528.787 -490.408)"
-							fill="none"
-							stroke="#ecfffb"
-							stroke-width="2"
-						/>
-					</svg>
+				<div class="hero-wrapper">
+					<div class="hero-title dark-item">
+						<h1>Nicholas Gould</h1>
+						<h2>Front-End Development + Design</h2>
+					</div>
+					<div class="hero-anim-section">
+						<div class="hero-anim dark-item">
+							<div class="box1 hero-boxes"></div>
+							<div class="box2 hero-boxes"></div>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="317.177"
+								height="72.292"
+								viewBox="0 0 317.177 72.292"
+							>
+								<path
+									id="box-path"
+									d="M9529.287,490.908h316.177V562.2H9529.287Z"
+									transform="translate(-9528.787 -490.408)"
+									fill="none"
+									stroke="#ecfffb"
+									stroke-width="2"
+								/>
+							</svg>
+						</div>
+					</div>
 				</div>
 			</section>
 			<section id="work" class="work-section">
@@ -1881,7 +1885,7 @@
 			<section class="contact-section">
 				<div class="contact-wrapper dark-item">
 					<h1>GET IN TOUCH</h1>
-					<div class="contact-card dark-item anim-el anim-up">
+					<div class="contact-card dark-item anim-el anim-right">
 						<h3>
 							<a href="mailto:nicholas@focuspointvisuals.com"
 								>nicholas<br />@focuspointvisuals.com</a
