UI scrolling test

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 			</div>
 			<div class="nav-overlay">
-				<div class="nav-links">
+				<div class="nav-links dark-item">
 					<ul>
 						<li><a href="#work">Work</a></li>
 						<li><a href="#skills">Skills</a></li>
@@ -1879,10 +1879,10 @@
 					</div>
 				</div>
 			</section>
-			<section class="awards-section">
+			<section id="awards" class="awards-section">
 				<div class="awards-wrapper"></div>
 			</section>
-			<section class="contact-section">
+			<section id="contact" class="contact-section">
 				<div class="contact-wrapper dark-item">
 					<h1>GET IN TOUCH</h1>
 					<div class="contact-card dark-item anim-el anim-right">
