MASTER: UI mobile test: removed indicators bg svg's

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 							deserunt placeat?
 						</p>
 					</div>
-					<svg
+					<!-- <svg
 						id="work-bg-circle"
 						xmlns="http://www.w3.org/2000/svg"
 						width="382.719"
@@ -271,7 +271,7 @@
 								<circle cx="135.5" cy="135.5" r="134" fill="none" />
 							</g>
 						</g>
-					</svg>
+					</svg> -->
 					<div class="work-card dark-item anim-el anim-right">
 						<div class="work-card-header">
 							<img src="./img/BNSTLK_logo.svg" alt="Focus Point Visuals Logo" />
@@ -499,7 +499,7 @@
 							</svg>
 						</div>
 					</div>
-					<svg
+					<!-- <svg
 						class="design-bg"
 						xmlns="http://www.w3.org/2000/svg"
 						width="487.492"
@@ -1052,7 +1052,7 @@
 								fill="#fff"
 							/>
 						</g>
-					</svg>
+					</svg> -->
 					<div class="skills-card dark-item anim-el anim-right">
 						<div class="top-icon">
 							<svg
