changes to animations

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 							<img src="./img/FPV Logo.svg" alt="Focus Point Visuals Logo" />
 							<h2>FOCUS POINT VISUALS</h2>
 						</div>
-						<h3>Digital Marketing, Photography, Videography (2017-present)</h3>
+						<h3>Digital Marketing & Landing Page Design (2017-present)</h3>
 						<!-- <button class="read-more">Read More</button> -->
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, qui
@@ -1885,7 +1885,7 @@
 			<section id="contact" class="contact-section">
 				<div class="contact-wrapper dark-item">
 					<h1>GET IN TOUCH</h1>
-					<div class="contact-card dark-item anim-el anim-right">
+					<div class="contact-card dark-item anim-el anim-up">
 						<h3>
 							<a href="mailto:nicholas@focuspointvisuals.com"
 								>nicholas<br />@focuspointvisuals.com</a
