--- a/index.html
+++ b/index.html
@@ -43,12 +43,142 @@
 			</div>
 			<div class="nav-overlay">
 				<div class="nav-links dark-item">
-					<ul>
-						<li><a href="#work">Work</a></li>
-						<li><a href="#skills">Skills</a></li>
-						<li><a href="#awards">Awards</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
+					<div class="nav-link-item">
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							xmlns:xlink="http://www.w3.org/1999/xlink"
+							width="54"
+							height="54"
+							viewBox="0 0 54 54"
+						>
+							<defs>
+								<filter
+									id="a"
+									x="0"
+									y="0"
+									width="54"
+									height="54"
+									filterUnits="userSpaceOnUse"
+								>
+									<feOffset dy="3" input="SourceAlpha" />
+									<feGaussianBlur stdDeviation="3" result="b" />
+									<feFlood flood-opacity="0.161" />
+									<feComposite operator="in" in2="b" />
+									<feComposite in="SourceGraphic" />
+								</filter>
+							</defs>
+							<g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#a)">
+								<path
+									d="M37.83,30.682,21.639,16.8A10.13,10.13,0,0,0,9.755,2.362l5.85,5.85a2.257,2.257,0,0,1,0,3.182l-3.568,3.568a2.257,2.257,0,0,1-3.182,0l-5.85-5.85A10.128,10.128,0,0,0,17.446,21L31.324,37.187a2.057,2.057,0,0,0,3.055.117l3.568-3.568a2.056,2.056,0,0,0-.117-3.055Z"
+									transform="translate(6.43 4.07)"
+									fill="#ecfffb"
+								/>
+							</g>
+						</svg>
+						<a href="#work"><h2>Work</h2></a>
+					</div>
+					<div class="nav-link-item">
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							xmlns:xlink="http://www.w3.org/1999/xlink"
+							width="58.5"
+							height="54"
+							viewBox="0 0 58.5 54"
+						>
+							<defs>
+								<filter
+									id="a"
+									x="0"
+									y="0"
+									width="58.5"
+									height="54"
+									filterUnits="userSpaceOnUse"
+								>
+									<feOffset dy="3" input="SourceAlpha" />
+									<feGaussianBlur stdDeviation="3" result="b" />
+									<feFlood flood-opacity="0.161" />
+									<feComposite operator="in" in2="b" />
+									<feComposite in="SourceGraphic" />
+								</filter>
+							</defs>
+							<g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#a)">
+								<path
+									d="M40.17,13.636l-1.591-1.591a1.125,1.125,0,0,0-1.591,0l-.8.8-2.032-2.032a4.481,4.481,0,0,0-1.15-4.332L29.829,3.295a11.251,11.251,0,0,0-15.91,0l6.364,3.182V7.795A4.5,4.5,0,0,0,21.6,10.976l3.455,3.455a4.481,4.481,0,0,0,4.332,1.15l2.032,2.032-.8.8a1.125,1.125,0,0,0,0,1.591l1.591,1.591a1.125,1.125,0,0,0,1.591,0l6.364-6.364a1.125,1.125,0,0,0,0-1.59ZM20.01,12.568a6.824,6.824,0,0,1-.693-.84L1.381,28.474a4.348,4.348,0,1,0,6.145,6.145L24.27,16.684a6.836,6.836,0,0,1-.8-.662L20.01,12.568Z"
+									transform="translate(9 6)"
+									fill="#ecfffb"
+								/>
+							</g>
+						</svg>
+						<a href="#skills"><h2>Skills</h2></a>
+					</div>
+					<div class="nav-link-item">
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							xmlns:xlink="http://www.w3.org/1999/xlink"
+							width="58.5"
+							height="54"
+							viewBox="0 0 58.5 54"
+						>
+							<defs>
+								<filter
+									id="a"
+									x="0"
+									y="0"
+									width="58.5"
+									height="54"
+									filterUnits="userSpaceOnUse"
+								>
+									<feOffset dy="3" input="SourceAlpha" />
+									<feGaussianBlur stdDeviation="3" result="b" />
+									<feFlood flood-opacity="0.161" />
+									<feComposite operator="in" in2="b" />
+									<feComposite in="SourceGraphic" />
+								</filter>
+							</defs>
+							<g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#a)">
+								<path
+									d="M38.813,4.5H31.5V1.688A1.683,1.683,0,0,0,29.813,0H10.688A1.683,1.683,0,0,0,9,1.688V4.5H1.688A1.683,1.683,0,0,0,0,6.188v3.938c0,2.51,1.582,5.091,4.352,7.08a16.472,16.472,0,0,0,7.734,2.932,15.553,15.553,0,0,0,4.788,5.175v5.063H13.5c-2.482,0-4.5,1.455-4.5,3.938v.844A.846.846,0,0,0,9.844,36H30.656a.846.846,0,0,0,.844-.844v-.844c0-2.482-2.018-3.937-4.5-3.937H23.625V25.313a15.553,15.553,0,0,0,4.788-5.175,16.416,16.416,0,0,0,7.734-2.932c2.763-1.99,4.352-4.57,4.352-7.08V6.188A1.683,1.683,0,0,0,38.813,4.5ZM6.982,13.556C5.266,12.319,4.5,10.941,4.5,10.125V9H9.014a25.254,25.254,0,0,0,.9,6.061,11.331,11.331,0,0,1-2.932-1.5ZM36,10.125c0,1.132-1.245,2.538-2.482,3.431a11.375,11.375,0,0,1-2.939,1.5A25.254,25.254,0,0,0,31.479,9H36Z"
+									transform="translate(9 6)"
+									fill="#ecfffb"
+								/>
+							</g>
+						</svg>
+						<a href="#awards"><h2>Awards</h2></a>
+					</div>
+					<div class="nav-link-item">
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							xmlns:xlink="http://www.w3.org/1999/xlink"
+							width="55.5"
+							height="48"
+							viewBox="0 0 55.5 48"
+						>
+							<defs>
+								<filter
+									id="a"
+									x="0"
+									y="0"
+									width="55.5"
+									height="48"
+									filterUnits="userSpaceOnUse"
+								>
+									<feOffset dy="3" input="SourceAlpha" />
+									<feGaussianBlur stdDeviation="3" result="b" />
+									<feFlood flood-opacity="0.161" />
+									<feComposite operator="in" in2="b" />
+									<feComposite in="SourceGraphic" />
+								</filter>
+							</defs>
+							<g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#a)">
+								<path
+									d="M36.75,6h-30A3.745,3.745,0,0,0,3.019,9.75L3,32.25A3.761,3.761,0,0,0,6.75,36h30a3.761,3.761,0,0,0,3.75-3.75V9.75A3.761,3.761,0,0,0,36.75,6Zm0,7.5-15,9.375L6.75,13.5V9.75l15,9.375,15-9.375Z"
+									transform="translate(6)"
+									fill="#ecfffb"
+								/>
+							</g>
+						</svg>
+						<a href="#contact"><h2>Contact</h2></a>
+					</div>
 				</div>
 				<div class="social-icons">
 					<ul>
@@ -1070,69 +1200,7 @@
 							<div class="icon-bg"></div>
 						</div>
 						<h3>UI/UX Design</h3>
-						<div class="icons-collection dark-item">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								xmlns:xlink="http://www.w3.org/1999/xlink"
-								width="66.697"
-								height="66.697"
-								viewBox="0 0 66.697 66.697"
-							>
-								<defs>
-									<filter
-										id="a"
-										x="0"
-										y="0"
-										width="66.697"
-										height="66.697"
-										filterUnits="userSpaceOnUse"
-									>
-										<feOffset dy="3" input="SourceAlpha" />
-										<feGaussianBlur stdDeviation="3" result="b" />
-										<feFlood flood-opacity="0.161" />
-										<feComposite operator="in" in2="b" />
-										<feComposite in="SourceGraphic" />
-									</filter>
-								</defs>
-								<g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#a)">
-									<path
-										d="M0,2.25v48.7H48.7V2.25ZM26.5,40.229c0,4.739-2.783,6.9-6.837,6.9a7.109,7.109,0,0,1-6.87-4.185l3.728-2.25c.717,1.272,1.37,2.348,2.946,2.348,1.5,0,2.457-.587,2.457-2.881V24.609H26.5Zm10.826,6.9c-4.25,0-7-2.022-8.337-4.674l3.728-2.152a4.994,4.994,0,0,0,4.511,2.783c1.891,0,3.109-.946,3.109-2.261,0-1.565-1.239-2.12-3.337-3.044l-1.141-.489c-3.3-1.4-5.489-3.174-5.489-6.9,0-3.435,2.62-6.044,6.7-6.044a6.74,6.74,0,0,1,6.5,3.663L40,30.294a3.112,3.112,0,0,0-2.946-1.957,1.986,1.986,0,0,0-2.185,1.957c0,1.37.848,1.924,2.815,2.783l1.141.489c3.891,1.663,6.076,3.37,6.076,7.2,0,4.109-3.239,6.37-7.576,6.37Z"
-										transform="translate(9 3.75)"
-										fill="#fff"
-									/>
-								</g>
-							</svg>
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								xmlns:xlink="http://www.w3.org/1999/xlink"
-								width="73.654"
-								height="66.7"
-								viewBox="0 0 73.654 66.7"
-							>
-								<defs>
-									<filter
-										id="a"
-										x="0"
-										y="0"
-										width="73.654"
-										height="66.7"
-										filterUnits="userSpaceOnUse"
-									>
-										<feOffset dy="3" input="SourceAlpha" />
-										<feGaussianBlur stdDeviation="3" result="b" />
-										<feFlood flood-opacity="0.161" />
-										<feComposite operator="in" in2="b" />
-										<feComposite in="SourceGraphic" />
-									</filter>
-								</defs>
-								<g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#a)">
-									<path
-										d="M45.458,18.033q-.88-.293-1.761-.554c.1-.4.185-.8.272-1.207,1.337-6.478.457-11.685-2.511-13.4-2.859-1.641-7.522.065-12.24,4.174-.467.4-.924.826-1.359,1.25-.293-.283-.6-.565-.9-.837-4.946-4.391-9.9-6.239-12.87-4.511-2.848,1.652-3.7,6.555-2.5,12.685.12.609.25,1.207.4,1.815-.7.2-1.38.413-2.022.641C4.163,20.1,0,23.272,0,26.555c0,3.391,4.435,6.794,10.468,8.859.489.163.978.326,1.478.467-.163.652-.3,1.294-.435,1.957-1.141,6.033-.25,10.816,2.6,12.457,2.935,1.7,7.87-.043,12.674-4.25.38-.337.761-.685,1.141-1.054.478.467.978.913,1.478,1.348,4.652,4,9.25,5.62,12.087,3.978,2.935-1.7,3.891-6.837,2.652-13.1Q44,36.5,43.817,35.751c.348-.1.685-.207,1.022-.315C51.11,33.359,55.654,30,55.654,26.555c0-3.294-4.283-6.489-10.2-8.522ZM30.751,8.8c4.044-3.522,7.815-4.9,9.533-3.913,1.837,1.054,2.544,5.315,1.391,10.913-.076.37-.152.728-.25,1.087a55.646,55.646,0,0,0-7.315-1.152,54.92,54.92,0,0,0-4.631-5.772c.424-.4.837-.783,1.272-1.163ZM18.174,32.2c.554.946,1.12,1.891,1.717,2.815a49.222,49.222,0,0,1-5.044-.815,50.778,50.778,0,0,1,1.772-4.837c.5.957,1.011,1.9,1.554,2.837ZM14.881,19.12c1.565-.348,3.228-.63,4.957-.848-.576.9-1.141,1.826-1.674,2.761s-1.054,1.87-1.544,2.826c-.685-1.62-1.261-3.207-1.739-4.739Zm2.978,7.489c.717-1.5,1.5-2.967,2.326-4.413s1.717-2.848,2.652-4.228c1.63-.12,3.294-.185,4.989-.185s3.37.065,4.989.185q1.386,2.054,2.641,4.207t2.359,4.391Q36.724,28.816,35.468,31c-.826,1.446-1.707,2.848-2.631,4.239-1.62.12-3.3.174-5.011.174s-3.359-.054-4.957-.152q-1.419-2.071-2.674-4.239c-.837-1.446-1.609-2.913-2.337-4.413ZM37.49,32.174c.554-.957,1.076-1.924,1.587-2.9a50.459,50.459,0,0,1,1.837,4.815,47.745,47.745,0,0,1-5.109.87C36.392,34.044,36.947,33.109,37.49,32.174Zm1.565-8.315c-.511-.957-1.033-1.913-1.576-2.848s-1.087-1.837-1.663-2.739a50.021,50.021,0,0,1,4.989.87,48.106,48.106,0,0,1-1.75,4.718ZM27.849,11.63a47.732,47.732,0,0,1,3.217,3.891c-2.152-.1-4.315-.1-6.468,0C25.664,14.119,26.762,12.815,27.849,11.63ZM15.24,4.967c1.826-1.065,5.881.457,10.152,4.239.272.239.543.5.826.761a55.225,55.225,0,0,0-4.663,5.772,57.3,57.3,0,0,0-7.3,1.13c-.141-.554-.261-1.12-.38-1.685-1.022-5.261-.348-9.229,1.37-10.218ZM12.576,33.62c-.457-.13-.9-.272-1.348-.424A22.17,22.17,0,0,1,4.381,29.8a4.877,4.877,0,0,1-2.044-3.25c0-1.989,3.435-4.533,8.392-6.261.62-.217,1.25-.413,1.88-.6a57.8,57.8,0,0,0,2.663,6.913A59.417,59.417,0,0,0,12.576,33.62ZM25.251,44.273A19.9,19.9,0,0,1,19.12,48.11a4.811,4.811,0,0,1-3.837.141c-1.728-1-2.446-4.837-1.467-10,.12-.609.25-1.217.4-1.815A54.379,54.379,0,0,0,21.6,37.5a57.363,57.363,0,0,0,4.7,5.8C25.946,43.642,25.6,43.968,25.251,44.273Zm2.663-2.641c-1.109-1.2-2.217-2.522-3.294-3.946,1.044.043,2.12.065,3.207.065,1.12,0,2.217-.022,3.3-.076a46.876,46.876,0,0,1-3.217,3.957Zm14.207,3.261a4.831,4.831,0,0,1-1.794,3.4c-1.728,1-5.413-.3-9.392-3.718-.457-.391-.913-.815-1.38-1.25A53.772,53.772,0,0,0,34.142,37.5a53.585,53.585,0,0,0,7.413-1.141c.109.446.207.891.293,1.326a19.815,19.815,0,0,1,.272,7.207ZM44.1,33.207c-.3.1-.609.2-.924.283A55.218,55.218,0,0,0,40.4,26.555a54.943,54.943,0,0,0,2.663-6.837c.565.163,1.109.337,1.63.511,5.065,1.739,8.62,4.326,8.62,6.3,0,2.131-3.794,4.881-9.218,6.674Zm-16.272-1.63A4.978,4.978,0,1,0,22.849,26.6,4.978,4.978,0,0,0,27.827,31.577Z"
-										transform="translate(9 3.75)"
-										fill="#fff"
-									/>
-								</g>
-							</svg>
+						<div class="icons-collection icons-design dark-item">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -1197,65 +1265,27 @@
 							</svg>
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
-								xmlns:xlink="http://www.w3.org/1999/xlink"
-								width="66.699"
-								height="66.699"
-								viewBox="0 0 66.699 66.699"
+								width="49.949"
+								height="48.7"
+								viewBox="0 0 49.949 48.7"
 							>
-								<defs>
-									<filter
-										id="a"
-										x="0"
-										y="0"
-										width="66.699"
-										height="66.699"
-										filterUnits="userSpaceOnUse"
-									>
-										<feOffset dy="3" input="SourceAlpha" />
-										<feGaussianBlur stdDeviation="3" result="b" />
-										<feFlood flood-opacity="0.161" />
-										<feComposite operator="in" in2="b" />
-										<feComposite in="SourceGraphic" />
-									</filter>
-								</defs>
-								<g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#a)">
-									<path
-										d="M47.806,20.566c-.837-3.359-2.424-5.891-5.8-5.891H37.642v5.152a7.455,7.455,0,0,1-7.261,7.37H18.772a5.924,5.924,0,0,0-5.8,5.9V44.164c0,3.152,2.739,5,5.8,5.9a19.533,19.533,0,0,0,11.609,0c2.924-.848,5.8-2.554,5.8-5.9V39.74h-11.6V38.262H42c3.381,0,4.631-2.359,5.8-5.891,1.217-3.641,1.163-7.142,0-11.8Zm-16.7,22.12a2.212,2.212,0,1,1-2.185,2.207A2.2,2.2,0,0,1,31.11,42.686ZM18.24,25.74H29.849a5.853,5.853,0,0,0,5.8-5.9V8.761c0-3.152-2.652-5.511-5.8-6.044a35.83,35.83,0,0,0-11.609.011c-4.913.87-5.8,2.685-5.8,6.044V13.2h11.62v1.478H8.076A7.257,7.257,0,0,0,.815,20.566a21.771,21.771,0,0,0,0,11.8c.826,3.435,2.794,5.891,6.174,5.891h3.989v-5.3A7.381,7.381,0,0,1,18.24,25.74Zm-.728-15.5A2.212,2.212,0,1,1,19.7,8.033a2.2,2.2,0,0,1-2.185,2.207Z"
-										transform="translate(9 3.75)"
-										fill="#fff"
-									/>
-								</g>
+								<path
+									d="M41.1.45H8.845A8.838,8.838,0,0,0,0,9.3V40.3A8.838,8.838,0,0,0,8.845,49.15H41.1A8.838,8.838,0,0,0,49.949,40.3V9.3A8.838,8.838,0,0,0,41.1.45Zm6.743,39.043a7.54,7.54,0,0,1-7.534,7.576H9.636a7.568,7.568,0,0,1-7.555-7.555V10.086A7.568,7.568,0,0,1,9.636,2.531H40.292a7.555,7.555,0,0,1,7.555,7.555Zm-28.1-16.254,5.827,11.2c.1.166.042.333-.125.333H21.832a.408.408,0,0,1-.437-.271c-1.332-2.747-2.685-5.494-4.079-8.45h-.042c-1.249,2.789-2.622,5.723-3.954,8.47a.4.4,0,0,1-.375.229H9.511c-.208,0-.229-.166-.125-.291l5.7-10.864L9.574,12.6a.168.168,0,0,1,.125-.291h3.58a.328.328,0,0,1,.375.229c1.311,2.747,2.643,5.578,3.892,8.346h.042c1.207-2.747,2.539-5.6,3.829-8.325.1-.166.166-.271.375-.271h3.351c.166,0,.229.125.125.291ZM26.6,26.631c0-4.849,3.226-8.637,8.346-8.637a9.229,9.229,0,0,1,1.082.042V12.521a.209.209,0,0,1,.208-.208h3.288c.167,0,.208.062.208.166V31.585a14.824,14.824,0,0,0,.1,2.04c0,.125-.042.167-.166.229A12.4,12.4,0,0,1,34.34,35.06C29.824,35.081,26.6,32.292,26.6,26.631ZM36.026,21.3a3.147,3.147,0,0,0-1.207-.208c-2.622,0-4.454,2.019-4.454,5.369,0,3.829,1.873,5.369,4.225,5.369a3.926,3.926,0,0,0,1.436-.229V21.3Z"
+									transform="translate(0 -0.45)"
+									fill="#fff"
+								/>
 							</svg>
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
-								xmlns:xlink="http://www.w3.org/1999/xlink"
-								width="61.197"
-								height="73.652"
-								viewBox="0 0 61.197 73.652"
+								width="32.478"
+								height="48.7"
+								viewBox="0 0 32.478 48.7"
 							>
-								<defs>
-									<filter
-										id="a"
-										x="0"
-										y="0"
-										width="61.197"
-										height="73.652"
-										filterUnits="userSpaceOnUse"
-									>
-										<feOffset dy="3" input="SourceAlpha" />
-										<feGaussianBlur stdDeviation="3" result="b" />
-										<feFlood flood-opacity="0.161" />
-										<feComposite operator="in" in2="b" />
-										<feComposite in="SourceGraphic" />
-									</filter>
-								</defs>
-								<g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#a)">
-									<path
-										d="M23.647,0h9.1V42.123a60.058,60.058,0,0,1-11.817,1.241c-11.11,0-16.9-5.023-16.9-14.656,0-9.278,6.145-15.3,15.66-15.3a14.527,14.527,0,0,1,3.958.473Zm0,21.2a9.03,9.03,0,0,0-3.073-.473c-4.61,0-7.267,2.836-7.267,7.8,0,4.847,2.542,7.5,7.209,7.5a21,21,0,0,0,3.131-.237V21.2Zm23.579-7.149v21.1c0,7.267-.531,10.755-2.126,13.767-1.477,2.9-3.427,4.728-7.446,6.736L29.2,51.633c4.019-1.89,5.969-3.546,7.209-6.087,1.3-2.6,1.714-5.614,1.714-13.531V14.05h9.1Zm-9.1-14h9.1V9.385h-9.1Z"
-										transform="translate(4.97 6)"
-										fill="#fff"
-									/>
-								</g>
+								<path
+									d="M25.829,16.237A8.118,8.118,0,1,0,25.829,0H9.593a8.113,8.113,0,1,0,0,16.227,8.118,8.118,0,1,0,0,16.237,8.118,8.118,0,1,0,8.113,8.123V16.237Zm0,0a8.113,8.113,0,1,0,8.113,8.113,8.113,8.113,0,0,0-8.113-8.113Z"
+									transform="translate(-1.47)"
+									fill="#fff"
+								/>
 							</svg>
 						</div>
 					</div>
@@ -1278,7 +1308,7 @@
 							<div class="icon-bg"></div>
 						</div>
 						<h3>Digital Marketing</h3>
-						<div class="skills-list">
+						<div class="skills-list dark-item">
 							<ul>
 								<li>Facebook Ads</li>
 								<li>Google Ads</li>
@@ -1304,7 +1334,7 @@
 							<div class="icon-bg"></div>
 						</div>
 						<h3>Photography</h3>
-						<div class="skills-list">
+						<div class="skills-list dark-item">
 							<ul>
 								<li>Lighting</li>
 								<li>Composition</li>
@@ -1330,7 +1360,7 @@
 							<div class="icon-bg"></div>
 						</div>
 						<h3>Filmmaking</h3>
-						<div class="skills-list">
+						<div class="skills-list dark-item">
 							<ul>
 								<li>Premiere Pro</li>
 								<li>After Effects</li>
@@ -1343,6 +1373,44 @@
 			</section>
 			<section id="awards" class="awards-section">
 				<div class="awards-wrapper"></div>
+			</section>
+			<section class="photography">
+				<div class="photo-wrapper">
+					<h3>I take photos too</h3>
+					<p>Mostly as a hobby, but sometimes professionally</p>
+					<div class="photo-grid">
+						<img
+							src="./img/photo-gallery/IMG_8512.jpg"
+							alt="quiet-wave clothing shoot"
+							class="img1 anim-el anim-right"
+						/>
+						<img
+							src="./img/photo-gallery/IMG_1580.jpg"
+							alt="grad-student at NCSU"
+							class="img2 anim-el anim-up"
+						/>
+						<img
+							src="./img/photo-gallery/IMG_1383.jpg"
+							alt="student in front of talley student union"
+							class="img3 anim-el anim-up"
+						/>
+						<img
+							src="./img/photo-gallery/IMG_3711.jpg"
+							alt="landscape of a spillway in north carolina"
+							class="img4 anim-el anim-left"
+						/>
+						<img
+							src="./img/photo-gallery/IMG_7155.jpg"
+							alt="Dog in the snow"
+							class="img5 anim-el anim-right"
+						/>
+						<img
+							src="./img/photo-gallery/IMG_9704.jpg"
+							alt="boy in the woods"
+							class="img6 anim-el anim-up"
+						/>
+					</div>
+				</div>
 			</section>
 			<section id="contact" class="contact-section">
 				<div class="contact-wrapper dark-item">
