bug fixes & performance improvements

--- a/index.html
+++ b/index.html
@@ -338,13 +338,11 @@
 			<section class="hero-section">
 				<div class="hero-wrapper">
 					<div class="hero-title dark-item anim-el anim-up">
-						<h1>Nicholas Gould</h1>
+						<h1>NICHOLAS GOULD</h1>
 						<h2>Front-End Development + Design</h2>
 					</div>
 					<div class="hero-anim-section">
 						<div class="hero-anim dark-item anim-el anim-up">
-							<div class="box1 hero-boxes"></div>
-							<div class="box2 hero-boxes"></div>
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
 								width="317.177"
@@ -360,6 +358,8 @@
 									stroke-width="2"
 								/>
 							</svg>
+							<div class="box1 hero-boxes"></div>
+							<div class="box2 hero-boxes"></div>
 						</div>
 					</div>
 				</div>
@@ -629,7 +629,7 @@
 							</svg>
 						</div>
 					</div>
-					<svg
+					<!-- <svg
 						class="design-bg"
 						xmlns="http://www.w3.org/2000/svg"
 						width="487.492"
@@ -1182,7 +1182,7 @@
 								fill="#fff"
 							/>
 						</g>
-					</svg>
+					</svg> -->
 					<div class="skills-card dark-item anim-el anim-right">
 						<div class="top-icon">
 							<svg
@@ -1374,10 +1374,40 @@
 			<section id="awards" class="awards-section">
 				<div class="awards-wrapper"></div>
 			</section>
+			<section class="client-logos" id="logos">
+				<!-- <h2>Some organizations i've worked with</h2> -->
+				<div class="logos-wrapper">
+					<img src="./img/Client logos/ef1.svg" alt="" class="logo1 logo" />
+					<img
+						src="./img/Client logos/WPCCLOGO.svg"
+						alt=""
+						class="logo2 logo"
+					/>
+					<img
+						src="./img/Client logos/Robertsgroup.svg"
+						alt=""
+						class="logo3 logo"
+					/>
+					<img
+						src="./img/Client logos/new-logov2.svg"
+						alt=""
+						class="logo4 logo"
+					/>
+					<img
+						src="./img/Client logos/well-played-logo_RGB.svg"
+						alt=""
+						class="logo5 logo"
+					/>
+				</div>
+			</section>
 			<section class="photography">
 				<div class="photo-wrapper">
-					<h3>I take photos too</h3>
-					<p>Mostly as a hobby, but sometimes professionally</p>
+					<div class="photos-overlay dark-item anim-el anim-up">
+						<h3 class="dark-item">I take photos too</h3>
+						<p class="dark-item">
+							Mostly as a hobby, but sometimes professionally.
+						</p>
+					</div>
 					<div class="photo-grid">
 						<img
 							src="./img/photo-gallery/IMG_8512.jpg"
@@ -1416,20 +1446,18 @@
 				<div class="contact-wrapper dark-item">
 					<h1>GET IN TOUCH</h1>
 					<div class="contact-card dark-item anim-el anim-up">
-						<h3>
-							<a href="mailto:nicholas@focuspointvisuals.com"
-								>nicholas<br />@focuspointvisuals.com</a
-							>
-						</h3>
+						<a class="cta-btn" href="mailto:nicholas@focuspointvisuals.com"
+							>Email Me</a
+						>
+
 						<div class="about-header">
 							<img src="./img/IMG_6401.png" alt="Profile of Nicholas Gould" />
-							<h3>About Me</h3>
+							<h4 class="dark-item">About Me</h4>
 						</div>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
 							obcaecati pariatur aliquam ex magni, quasi enim veritatis
-							explicabo atque unde, architecto eius non molestias? Deserunt sunt
-							exercitationem ut eius minima.
+							explicabo atque unde,
 						</p>
 					</div>
 				</div>
