bug fixes + media queries

--- a/index.html
+++ b/index.html
@@ -326,6 +326,32 @@
 					</div>
 				</div>
 			</section>
+			<section class="client-logos dark-item" id="logos">
+				<h2>SOME ORGANIZATIONS I'VE WORKED WITH</h2>
+				<div class="logos-wrapper">
+					<img src="./img/Client logos/ef1.svg" alt="" class="logo1 logo" />
+					<img
+						src="./img/Client logos/WPCCLOGO.svg"
+						alt=""
+						class="logo2 logo"
+					/>
+					<img
+						src="./img/Client logos/Robertsgroup.svg"
+						alt=""
+						class="logo3 logo"
+					/>
+					<img
+						src="./img/Client logos/new-logov2.svg"
+						alt=""
+						class="logo4 logo"
+					/>
+					<img
+						src="./img/Client logos/well-played-logo_RGB.svg"
+						alt=""
+						class="logo5 logo"
+					/>
+				</div>
+			</section>
 			<section id="skills" class="skills-section">
 				<!-- <h1>SKILLS</h1> -->
 				<h1 class="bg-text dark-item">SKILLS</h1>
@@ -1270,33 +1296,19 @@
 					</div>
 				</div>
 			</section>
-			<section id="awards" class="awards-section">
-				<div class="awards-wrapper"></div>
-			</section>
-			<section class="client-logos" id="logos">
-				<!-- <h2>Some organizations i've worked with</h2> -->
-				<div class="logos-wrapper">
-					<img src="./img/Client logos/ef1.svg" alt="" class="logo1 logo" />
-					<img
-						src="./img/Client logos/WPCCLOGO.svg"
-						alt=""
-						class="logo2 logo"
-					/>
-					<img
-						src="./img/Client logos/Robertsgroup.svg"
-						alt=""
-						class="logo3 logo"
-					/>
-					<img
-						src="./img/Client logos/new-logov2.svg"
-						alt=""
-						class="logo4 logo"
-					/>
-					<img
-						src="./img/Client logos/well-played-logo_RGB.svg"
-						alt=""
-						class="logo5 logo"
-					/>
+			<section class="testimonial-section">
+				<div class="testimonial-wrapper dark-item">
+					<h2 class="anim-el anim-up">
+						“In under 18 months we have seen a <span>big increase</span> in our
+						social media presence and this is leading to increased number of
+						applications to the college as well as an
+						<span>increase in enrollment</span>.”
+					</h2>
+					<h4 class="anim-el anim-up">
+						— Dr. Michael Helmick <br />
+						Former President,<br />
+						Western Piedmont Community College
+					</h4>
 				</div>
 			</section>
 			<section id="photos" class="photography">
