bug fixes + updated about section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 		<meta name="description" content="" />
 		<meta http-equiv="X-UA-Compatible" content="IE=7" />
 		<link rel="stylesheet" href="./style/main.css" />
-		<link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
+		<link
+			rel="shortcut icon"
+			href="./img/favicon 32 3@2x.png"
+			type="image/x-icon"
+		/>
+		<link rel="apple-touch-icon" href="./img/IOS 180@2x.png" />
 		<title>Nicholas Gould</title>
 	</head>
 	<body>
@@ -75,7 +80,7 @@
 								/>
 							</g>
 						</svg>
-						<a href="#work"><h2>Work</h2></a>
+						<a href="#work"><h2>WORK</h2></a>
 					</div>
 					<div class="nav-link-item">
 						<svg
@@ -109,7 +114,7 @@
 								/>
 							</g>
 						</svg>
-						<a href="#skills"><h2>Skills</h2></a>
+						<a href="#skills"><h2>SKILLS</h2></a>
 					</div>
 					<div class="nav-link-item">
 						<svg
@@ -166,7 +171,7 @@
 								</g>
 							</g>
 						</svg>
-						<a href="#photos"><h2>Photos</h2></a>
+						<a href="#photos"><h2>PHOTOS</h2></a>
 					</div>
 					<div class="nav-link-item">
 						<svg
@@ -200,7 +205,7 @@
 								/>
 							</g>
 						</svg>
-						<a href="#contact"><h2>Contact</h2></a>
+						<a href="#contact"><h2>CONTACT</h2></a>
 					</div>
 				</div>
 				<div class="social-icons">
@@ -1374,19 +1379,30 @@
 					<a class="cta-btn" href="mailto:nicholas@focuspointvisuals.com"
 						>Email Me</a
 					>
+
 					<div class="contact-card dark-item anim-el anim-up">
-						<div class="about-header">
-							<img src="./img/IMG_6401.png" alt="Profile of Nicholas Gould" />
-							<h4 class="dark-item">About Me</h4>
+						<div class="about-content">
+							<div class="about-text">
+								<!-- <img src="./img/IMG_6401.png" alt="Profile of Nicholas Gould" /> -->
+								<h2 class="dark-item">About Me</h2>
+								<p>
+									Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure
+									harum quae dolorum voluptate incidunt corporis id quia ipsam
+									quibusdam voluptatibus quasi quod sunt, ducimus nesciunt
+									facere laboriosam illo corrupti vitae ad odio amet accusamus,
+									rerum quis. Itaque sequi corporis exercitationem nobis
+									officiis? Autem vitae fuga commodi unde eos, voluptatum
+									dignissimos.
+								</p>
+							</div>
+							<div class="about-image">
+								<!-- <img
+									class="nicholas-profile"
+									src="./img/IMG_1399.jpg"
+									alt="Nicholas in front of talley student union at NC State"
+								/> -->
+							</div>
 						</div>
-						<p>
-							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure
-							harum quae dolorum voluptate incidunt corporis id quia ipsam
-							quibusdam voluptatibus quasi quod sunt, ducimus nesciunt facere
-							laboriosam illo corrupti vitae ad odio amet accusamus, rerum quis.
-							Itaque sequi corporis exercitationem nobis officiis? Autem vitae
-							fuga commodi unde eos, voluptatum dignissimos.
-						</p>
 					</div>
 				</div>
 			</section>
