--- a/index.html
+++ b/index.html
@@ -288,9 +288,11 @@
 						<h3>Digital Marketing & Landing Page Design (2017-present)</h3>
 						<!-- <button class="read-more">Read More</button> -->
 						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, qui
-							molestias iste voluptatibus voluptatum iure nulla facilis magnam
-							deserunt placeat?
+							Required sales and communication skills when onboarding and
+							dealing with clients, as well as mastery in copywriting, Facebook
+							Ads, Google Ads, and web design to ensure profitable campaigns for
+							the client. Notably achieved a 550% ROI on a Facebook Ad Campaign
+							for Western Piedmont Community College.
 						</p>
 					</div>
 					<!-- <svg
@@ -332,7 +334,7 @@
 				</div>
 			</section>
 			<section class="client-logos dark-item" id="logos">
-				<h2>SOME ORGANIZATIONS I'VE WORKED WITH</h2>
+				<h2>SOME ORGANIZATIONS IVE WORKED WITH</h2>
 				<div class="logos-wrapper">
 					<img src="./img/Client logos/ef1.svg" alt="" class="logo1 logo" />
 					<img
@@ -1305,9 +1307,9 @@
 				<div class="testimonial-wrapper dark-item">
 					<h2 class="anim-el anim-up">
 						“In under 18 months we have seen a <span>big increase</span> in our
-						social media presence and this is leading to increased number of
-						applications to the college as well as an
-						<span>increase in enrollment</span>.”
+						social media presence and this is leading to
+						<span>increased number of applications</span> to the college as well
+						as an <span>increase in enrollment</span>.”
 					</h2>
 					<h4 class="anim-el anim-up">
 						— Dr. Michael Helmick <br />
