--- a/index.html
+++ b/index.html
@@ -39,7 +39,75 @@
 						/>
 					</svg>
 				</div>
-				<a href="#" id="logo"><h3>NG</h3></a>
+				<!-- <a href="./index.html" id="logo"><h3>NG</h3></a> -->
+				<a href="./index.html" id="logo"
+					><svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="374"
+						height="454"
+						viewBox="0 0 374 454"
+					>
+						<g transform="translate(173 2)">
+							<text
+								transform="translate(0 355)"
+								fill="#554c8c"
+								font-size="332"
+								font-family="OpenSansCondensed-Bold, Open Sans Condensed"
+								font-weight="700"
+							>
+								<tspan x="0" y="0">G</tspan>
+							</text>
+							<text
+								transform="translate(10 355)"
+								fill="#4889f4"
+								font-size="332"
+								font-family="OpenSansCondensed-Bold, Open Sans Condensed"
+								font-weight="700"
+							>
+								<tspan x="0" y="0">G</tspan>
+							</text>
+							<text
+								transform="translate(20 355)"
+								fill="#6fe0cb"
+								font-size="332"
+								font-family="OpenSansCondensed-Bold, Open Sans Condensed"
+								font-weight="700"
+							>
+								<tspan x="0" y="0">G</tspan>
+							</text>
+						</g>
+						<text
+							transform="translate(0 355)"
+							fill="#554c8c"
+							font-size="332"
+							font-family="OpenSansCondensed-Bold, Open Sans Condensed"
+							font-weight="700"
+						>
+							<tspan x="0" y="0">N</tspan>
+						</text>
+						<text
+							transform="translate(10 355)"
+							fill="#e3637c"
+							font-size="332"
+							font-family="OpenSansCondensed-Bold, Open Sans Condensed"
+							font-weight="700"
+						>
+							<tspan x="0" y="0">N</tspan>
+						</text>
+						<text
+							transform="translate(20 355)"
+							fill="#f09066"
+							font-size="332"
+							font-family="OpenSansCondensed-Bold, Open Sans Condensed"
+							font-weight="700"
+						>
+							<tspan x="0" y="0">N</tspan>
+						</text>
+					</svg></a
+				>
+				<!-- <a href="./index.html" id="logo"
+					><img src="./img/NG LOGO.png" alt=""
+				/></a> -->
 				<div class="burger">
 					<div class="line1"></div>
 					<div class="line2"></div>
@@ -280,7 +348,7 @@
 				<!-- <h1>WORK</h1> -->
 				<h1 class="bg-text dark-item">WORK</h1>
 				<div class="work-wrapper">
-					<div class="work-card dark-item anim-el anim-left">
+					<div class="work-card dark-item anim-el anim-up">
 						<div class="work-card-header">
 							<img src="./img/FPV Logo.svg" alt="Focus Point Visuals Logo" />
 							<h2>FOCUS POINT VISUALS</h2>
@@ -291,8 +359,9 @@
 							Required sales and communication skills when onboarding and
 							dealing with clients, as well as mastery in copywriting, Facebook
 							Ads, Google Ads, and web design to ensure profitable campaigns for
-							the client. Notably achieved a 550% ROI on a Facebook Ad Campaign
-							for Western Piedmont Community College.
+							the client.
+							<b>Notably achieved a 550% ROI</b> on a Facebook Ad Campaign for
+							Western Piedmont Community College.
 						</p>
 					</div>
 					<!-- <svg
@@ -363,7 +432,7 @@
 				<!-- <h1>SKILLS</h1> -->
 				<h1 class="bg-text dark-item">SKILLS</h1>
 				<div class="skills-wrapper">
-					<div class="skills-card dark-item anim-el anim-left">
+					<div class="skills-card dark-item anim-el anim-up">
 						<div class="top-icon">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
@@ -1115,7 +1184,7 @@
 							/>
 						</g>
 					</svg> -->
-					<div class="skills-card dark-item anim-el anim-right">
+					<div class="skills-card dark-item anim-el anim-left">
 						<div class="top-icon">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
@@ -1222,7 +1291,7 @@
 						</div>
 					</div>
 					<div class="flex-break"></div>
-					<div class="skills-card dark-item anim-el anim-left">
+					<div class="skills-card dark-item anim-el anim-right">
 						<div class="top-icon">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
@@ -1249,7 +1318,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="skills-card dark-item anim-el anim-right">
+					<div class="skills-card dark-item anim-el anim-up">
 						<div class="top-icon">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
@@ -1323,7 +1392,7 @@
 					<div class="photos-overlay dark-item anim-el anim-up">
 						<h3 class="dark-item">I take photos too</h3>
 						<p class="dark-item">
-							Mostly as a hobby, but sometimes professionally.
+							Mostly as a hobby, but i've done professional shoots as well.
 						</p>
 					</div>
 					<div class="photo-grid">
@@ -1375,14 +1444,9 @@
 					</div>
 				</div>
 			</section>
-			<section id="contact" class="contact-section">
-				<div class="contact-wrapper dark-item">
-					<h1>GET IN TOUCH</h1>
-					<a class="cta-btn" href="mailto:nicholas@focuspointvisuals.com"
-						>Email Me</a
-					>
-
-					<div class="contact-card dark-item anim-el anim-up">
+			<section id="about" class="about-section">
+				<div class="about-wrapper dark-item">
+					<div class="about-card dark-item anim-el anim-up">
 						<div class="about-content">
 							<div class="about-text">
 								<!-- <img src="./img/IMG_6401.png" alt="Profile of Nicholas Gould" /> -->
@@ -1410,6 +1474,12 @@
 			</section>
 		</main>
 		<footer class="dark-item">
+			<div class="cta-footer">
+				<h1>GET IN TOUCH</h1>
+				<a class="cta-btn" href="mailto:nicholas@focuspointvisuals.com"
+					>Email Me</a
+				>
+			</div>
 			<!-- <h3>&copy; Nicholas Gould 2020</h3> -->
 			<div class="social-icons-footer">
 				<ul>
