--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		<nav>
 			<div class="nav-header">
 				<div class="appearance-toggle dark-item">
-					<svg
+					<div class="dark-bg"></div>
+					<i class="fas fa-moon fa-2x"></i>
+					<!-- <svg
 						xmlns="http://www.w3.org/2000/svg"
 						width="30"
 						height="30"
@@ -37,72 +39,79 @@
 							transform="translate(1.985 2.605)"
 							fill="#272b2e"
 						/>
-					</svg>
+					</svg> -->
 				</div>
 				<!-- <a href="./index.html" id="logo"><h3>NG</h3></a> -->
 				<a href="./index.html" id="logo"
 					><svg
 						xmlns="http://www.w3.org/2000/svg"
-						width="374"
-						height="454"
-						viewBox="0 0 374 454"
+						xmlns:xlink="http://www.w3.org/1999/xlink"
+						width="395"
+						height="246"
+						viewBox="0 0 395 246"
 					>
-						<g transform="translate(173 2)">
-							<text
-								transform="translate(0 355)"
-								fill="#554c8c"
-								font-size="332"
-								font-family="OpenSansCondensed-Bold, Open Sans Condensed"
-								font-weight="700"
-							>
-								<tspan x="0" y="0">G</tspan>
-							</text>
-							<text
-								transform="translate(10 355)"
-								fill="#4889f4"
-								font-size="332"
-								font-family="OpenSansCondensed-Bold, Open Sans Condensed"
-								font-weight="700"
-							>
-								<tspan x="0" y="0">G</tspan>
-							</text>
-							<text
-								transform="translate(20 355)"
-								fill="#6fe0cb"
-								font-size="332"
-								font-family="OpenSansCondensed-Bold, Open Sans Condensed"
-								font-weight="700"
-							>
-								<tspan x="0" y="0">G</tspan>
-							</text>
+						<defs>
+							<clipPath id="b"><rect width="395" height="246" /></clipPath>
+						</defs>
+						<g id="a" clip-path="url(#b)">
+							<g transform="translate(-16 -114)">
+								<g transform="translate(203)">
+									<text
+										transform="translate(0 355)"
+										fill="#554c8c"
+										font-size="332"
+										font-family="OpenSansCondensed-Bold, Open Sans Condensed"
+										font-weight="700"
+									>
+										<tspan x="0" y="0">G</tspan>
+									</text>
+									<text
+										transform="translate(20 355)"
+										fill="#4889f4"
+										font-size="332"
+										font-family="OpenSansCondensed-Bold, Open Sans Condensed"
+										font-weight="700"
+									>
+										<tspan x="0" y="0">G</tspan>
+									</text>
+									<text
+										transform="translate(40 355)"
+										fill="#6fe0cb"
+										font-size="332"
+										font-family="OpenSansCondensed-Bold, Open Sans Condensed"
+										font-weight="700"
+									>
+										<tspan x="0" y="0">G</tspan>
+									</text>
+								</g>
+								<text
+									fill="#554c8c"
+									font-size="332"
+									font-family="OpenSansCondensed-Bold, Open Sans Condensed"
+									font-weight="700"
+								>
+									<tspan x="0" y="355">N</tspan>
+								</text>
+								<text
+									transform="translate(20)"
+									fill="#e3637c"
+									font-size="332"
+									font-family="OpenSansCondensed-Bold, Open Sans Condensed"
+									font-weight="700"
+								>
+									<tspan x="0" y="355">N</tspan>
+								</text>
+								<text
+									transform="translate(40)"
+									fill="#f09066"
+									font-size="332"
+									font-family="OpenSansCondensed-Bold, Open Sans Condensed"
+									font-weight="700"
+								>
+									<tspan x="0" y="355">N</tspan>
+								</text>
+							</g>
 						</g>
-						<text
-							transform="translate(0 355)"
-							fill="#554c8c"
-							font-size="332"
-							font-family="OpenSansCondensed-Bold, Open Sans Condensed"
-							font-weight="700"
-						>
-							<tspan x="0" y="0">N</tspan>
-						</text>
-						<text
-							transform="translate(10 355)"
-							fill="#e3637c"
-							font-size="332"
-							font-family="OpenSansCondensed-Bold, Open Sans Condensed"
-							font-weight="700"
-						>
-							<tspan x="0" y="0">N</tspan>
-						</text>
-						<text
-							transform="translate(20 355)"
-							fill="#f09066"
-							font-size="332"
-							font-family="OpenSansCondensed-Bold, Open Sans Condensed"
-							font-weight="700"
-						>
-							<tspan x="0" y="0">N</tspan>
-						</text>
 					</svg></a
 				>
 				<!-- <a href="./index.html" id="logo"
@@ -116,165 +125,32 @@
 			</div>
 			<div class="nav-overlay">
 				<div class="nav-links dark-item">
-					<div class="nav-link-item">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							xmlns:xlink="http://www.w3.org/1999/xlink"
-							width="54"
-							height="54"
-							viewBox="0 0 54 54"
-						>
-							<defs>
-								<filter
-									id="a"
-									x="0"
-									y="0"
-									width="54"
-									height="54"
-									filterUnits="userSpaceOnUse"
-								>
-									<feOffset dy="3" input="SourceAlpha" />
-									<feGaussianBlur stdDeviation="3" result="b" />
-									<feFlood flood-opacity="0.161" />
-									<feComposite operator="in" in2="b" />
-									<feComposite in="SourceGraphic" />
-								</filter>
-							</defs>
-							<g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#a)">
-								<path
-									d="M37.83,30.682,21.639,16.8A10.13,10.13,0,0,0,9.755,2.362l5.85,5.85a2.257,2.257,0,0,1,0,3.182l-3.568,3.568a2.257,2.257,0,0,1-3.182,0l-5.85-5.85A10.128,10.128,0,0,0,17.446,21L31.324,37.187a2.057,2.057,0,0,0,3.055.117l3.568-3.568a2.056,2.056,0,0,0-.117-3.055Z"
-									transform="translate(6.43 4.07)"
-									fill="#fff"
-								/>
-							</g>
-						</svg>
-						<a href="#work"><h2>WORK</h2></a>
-					</div>
-					<div class="nav-link-item">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							xmlns:xlink="http://www.w3.org/1999/xlink"
-							width="58.5"
-							height="54"
-							viewBox="0 0 58.5 54"
-						>
-							<defs>
-								<filter
-									id="a"
-									x="0"
-									y="0"
-									width="58.5"
-									height="54"
-									filterUnits="userSpaceOnUse"
-								>
-									<feOffset dy="3" input="SourceAlpha" />
-									<feGaussianBlur stdDeviation="3" result="b" />
-									<feFlood flood-opacity="0.161" />
-									<feComposite operator="in" in2="b" />
-									<feComposite in="SourceGraphic" />
-								</filter>
-							</defs>
-							<g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#a)">
-								<path
-									d="M40.17,13.636l-1.591-1.591a1.125,1.125,0,0,0-1.591,0l-.8.8-2.032-2.032a4.481,4.481,0,0,0-1.15-4.332L29.829,3.295a11.251,11.251,0,0,0-15.91,0l6.364,3.182V7.795A4.5,4.5,0,0,0,21.6,10.976l3.455,3.455a4.481,4.481,0,0,0,4.332,1.15l2.032,2.032-.8.8a1.125,1.125,0,0,0,0,1.591l1.591,1.591a1.125,1.125,0,0,0,1.591,0l6.364-6.364a1.125,1.125,0,0,0,0-1.59ZM20.01,12.568a6.824,6.824,0,0,1-.693-.84L1.381,28.474a4.348,4.348,0,1,0,6.145,6.145L24.27,16.684a6.836,6.836,0,0,1-.8-.662L20.01,12.568Z"
-									transform="translate(9 6)"
-									fill="#fff"
-								/>
-							</g>
-						</svg>
-						<a href="#skills"><h2>SKILLS</h2></a>
-					</div>
-					<div class="nav-link-item">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							xmlns:xlink="http://www.w3.org/1999/xlink"
-							width="62.047"
-							height="51.035"
-							viewBox="0 0 62.047 51.035"
-						>
-							<defs>
-								<filter
-									id="a"
-									x="15.428"
-									y="12.101"
-									width="31.191"
-									height="31.191"
-									filterUnits="userSpaceOnUse"
-								>
-									<feOffset dy="3" input="SourceAlpha" />
-									<feGaussianBlur stdDeviation="3" result="b" />
-									<feFlood flood-opacity="0.161" />
-									<feComposite operator="in" in2="b" />
-									<feComposite in="SourceGraphic" />
-								</filter>
-								<filter
-									id="c"
-									x="0"
-									y="0"
-									width="62.047"
-									height="51.035"
-									filterUnits="userSpaceOnUse"
-								>
-									<feOffset dy="3" input="SourceAlpha" />
-									<feGaussianBlur stdDeviation="3" result="d" />
-									<feFlood flood-opacity="0.161" />
-									<feComposite operator="in" in2="d" />
-									<feComposite in="SourceGraphic" />
-								</filter>
-							</defs>
-							<g transform="translate(4.5 -1.875)">
-								<g transform="matrix(1, 0, 0, 1, -4.5, 1.88)" filter="url(#a)">
-									<path
-										d="M27.148,21.889a6.6,6.6,0,1,1-6.6-6.6A6.6,6.6,0,0,1,27.148,21.889Z"
-										transform="translate(10.47 2.81)"
-										fill="#fff"
-									/>
-								</g>
-								<g transform="matrix(1, 0, 0, 1, -4.5, 1.88)" filter="url(#c)">
-									<path
-										d="M45.048,13.381H38.8a1.862,1.862,0,0,1-1.376-.619C34.163,9.114,32.935,7.875,31.6,7.875H21.8c-1.342,0-2.661,1.239-5.93,4.9a1.826,1.826,0,0,1-1.365.608h-.47v-.918a.92.92,0,0,0-.918-.918H10.132a.92.92,0,0,0-.918.918v.918h-.86A3.72,3.72,0,0,0,4.5,16.9V37.09a3.971,3.971,0,0,0,3.843,3.82H45.048a3.677,3.677,0,0,0,3.5-3.82V16.9A3.419,3.419,0,0,0,45.048,13.381ZM26.982,36.368a9.807,9.807,0,1,1,9.337-9.337A9.816,9.816,0,0,1,26.982,36.368ZM37.535,20.034a1.491,1.491,0,1,1,1.491-1.491A1.488,1.488,0,0,1,37.535,20.034Z"
-										transform="translate(4.5 -1.88)"
-										fill="#fff"
-									/>
-								</g>
-							</g>
-						</svg>
-						<a href="#photos"><h2>PHOTOS</h2></a>
-					</div>
-					<div class="nav-link-item">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							xmlns:xlink="http://www.w3.org/1999/xlink"
-							width="55.5"
-							height="48"
-							viewBox="0 0 55.5 48"
-						>
-							<defs>
-								<filter
-									id="a"
-									x="0"
-									y="0"
-									width="55.5"
-									height="48"
-									filterUnits="userSpaceOnUse"
-								>
-									<feOffset dy="3" input="SourceAlpha" />
-									<feGaussianBlur stdDeviation="3" result="b" />
-									<feFlood flood-opacity="0.161" />
-									<feComposite operator="in" in2="b" />
-									<feComposite in="SourceGraphic" />
-								</filter>
-							</defs>
-							<g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#a)">
-								<path
-									d="M36.75,6h-30A3.745,3.745,0,0,0,3.019,9.75L3,32.25A3.761,3.761,0,0,0,6.75,36h30a3.761,3.761,0,0,0,3.75-3.75V9.75A3.761,3.761,0,0,0,36.75,6Zm0,7.5-15,9.375L6.75,13.5V9.75l15,9.375,15-9.375Z"
-									transform="translate(6)"
-									fill="#fff"
-								/>
-							</g>
-						</svg>
-						<a href="#contact"><h2>CONTACT</h2></a>
-					</div>
+					<ul>
+						<li>
+							<div class="nav-link-item">
+								<i class="fas fa-hammer fa-2x"></i>
+								<a href="#work"><h2>WORK</h2></a>
+							</div>
+						</li>
+						<li>
+							<div class="nav-link-item">
+								<i class="fas fa-brain fa-2x"></i>
+								<a href="#skills"><h2>SKILLS</h2></a>
+							</div>
+						</li>
+						<li>
+							<div class="nav-link-item">
+								<i class="fas fa-images fa-2x"></i>
+								<a href="#photos"><h2>PHOTOS</h2></a>
+							</div>
+						</li>
+						<li>
+							<div class="nav-link-item fa-2x">
+								<i class="fas fa-address-card"></i>
+								<a href="#about"><h2>ABOUT</h2></a>
+							</div>
+						</li>
+					</ul>
 				</div>
 				<div class="social-icons">
 					<ul>
@@ -283,32 +159,32 @@
 								class="btn-anim-item"
 								href="https://github.com/nrgould"
 								target="_blank"
-								><img src="./svg/Icon awesome-github.svg" alt=""
-							/></a>
+								><i class="fab fa-github fa-2x"></i
+							></a>
 						</li>
 						<li>
 							<a
 								class="btn-anim-item"
 								href="https://instagram.com/nicholasgould1"
 								target="_blank"
-								><img src="./svg/Icon awesome-instagram.svg" alt=""
-							/></a>
+								><i class="fab fa-instagram fa-2x"></i
+							></a>
 						</li>
 						<li>
 							<a
 								class="btn-anim-item"
 								href="https://twitter.com/nrgould197"
 								target="_blank"
-								><img src="./svg/Icon awesome-twitter.svg" alt=""
-							/></a>
+								><i class="fab fa-twitter fa-2x"></i
+							></a>
 						</li>
 						<li>
 							<a
 								class="btn-anim-item"
 								href="https://www.linkedin.com/in/nicholasgouldfpv/"
 								target="_blank"
-								><img src="./svg/Icon awesome-linkedin-in.svg" alt=""
-							/></a>
+								><i class="fab fa-linkedin-in fa-2x"></i
+							></a>
 						</li>
 					</ul>
 				</div>
@@ -356,10 +232,11 @@
 						<h3>Digital Marketing & Landing Page Design (2017-present)</h3>
 						<!-- <button class="read-more">Read More</button> -->
 						<p>
-							Required sales and communication skills when onboarding and
-							dealing with clients, as well as mastery in copywriting, Facebook
-							Ads, Google Ads, and web design to ensure profitable campaigns for
-							the client.
+							Here I developed valuable sales and communication experience to be
+							able to run my own business and to deal with clients. I also
+							developed advanced skills in digital marketing (Facebook & Google
+							Ads + web design) in order to ensure profitable campaigns for
+							clients.
 							<b>Notably achieved a 550% ROI</b> on a Facebook Ad Campaign for
 							Western Piedmont Community College.
 						</p>
@@ -1392,7 +1269,8 @@
 					<div class="photos-overlay dark-item anim-el anim-up">
 						<h3 class="dark-item">I take photos too</h3>
 						<p class="dark-item">
-							Mostly as a hobby, but i've done professional shoots as well.
+							Mostly as a hobby, but i've done many professional shoots and have
+							even sold exclusive rights to images.
 						</p>
 					</div>
 					<div class="photo-grid">
@@ -1452,13 +1330,10 @@
 								<!-- <img src="./img/IMG_6401.png" alt="Profile of Nicholas Gould" /> -->
 								<h2 class="dark-item">About Me</h2>
 								<p>
-									Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure
-									harum quae dolorum voluptate incidunt corporis id quia ipsam
-									quibusdam voluptatibus quasi quod sunt, ducimus nesciunt
-									facere laboriosam illo corrupti vitae ad odio amet accusamus,
-									rerum quis. Itaque sequi corporis exercitationem nobis
-									officiis? Autem vitae fuga commodi unde eos, voluptatum
-									dignissimos.
+									Currently a student at North Carolina State University, I love
+									to tinker and create in whatever form I can. I have a passion
+									for education and plan to build a career around education
+									technologies.
 								</p>
 							</div>
 							<div class="about-image">
@@ -1488,36 +1363,43 @@
 							class="btn-anim-item"
 							href="https://github.com/nrgould"
 							target="_blank"
-							><img src="./svg/Icon awesome-github.svg" alt=""
-						/></a>
+							><i class="fab fa-github fa-2x"></i
+						></a>
 					</li>
 					<li>
 						<a
 							class="btn-anim-item"
 							href="https://instagram.com/nicholasgould1"
 							target="_blank"
-							><img src="./svg/Icon awesome-instagram.svg" alt=""
-						/></a>
+							><i class="fab fa-instagram fa-2x"></i
+						></a>
 					</li>
 					<li>
 						<a
 							class="btn-anim-item"
 							href="https://twitter.com/nrgould197"
 							target="_blank"
-							><img src="./svg/Icon awesome-twitter.svg" alt=""
-						/></a>
+							><i class="fab fa-twitter fa-2x"></i
+						></a>
 					</li>
 					<li>
 						<a
 							class="btn-anim-item"
 							href="https://www.linkedin.com/in/nicholasgouldfpv/"
 							target="_blank"
-							><img src="./svg/Icon awesome-linkedin-in.svg" alt=""
-						/></a>
+							><i class="fab fa-linkedin-in fa-2x"></i
+						></a>
 					</li>
 				</ul>
 			</div>
 		</footer>
+		<!-- FONT AWESOME -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+			integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+			crossorigin="anonymous"
+		/>
 		<!-- GSAP -->
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"
