Bug fixes and performance improvements

--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
 		<meta name="description" content="" />
 		<meta http-equiv="X-UA-Compatible" content="IE=7" />
 		<link rel="stylesheet" href="./style/main.css" />
-		<link
-			rel="shortcut icon"
-			href="./img/favicon 32 3@2x.png"
-			type="image/x-icon"
-		/>
-		<link rel="apple-touch-icon" href="./img/IOS 180@2x.png" />
+		<link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
 		<title>Nicholas Gould</title>
 	</head>
 	<body>
@@ -41,7 +36,6 @@
 						/>
 					</svg> -->
 				</div>
-				<!-- <a href="./index.html" id="logo"><h3>NG</h3></a> -->
 				<a href="./index.html" id="logo"
 					><svg
 						xmlns="http://www.w3.org/2000/svg"
@@ -114,9 +108,6 @@
 						</g>
 					</svg></a
 				>
-				<!-- <a href="./index.html" id="logo"
-					><img src="./img/NG LOGO.png" alt=""
-				/></a> -->
 				<div class="burger">
 					<div class="line1"></div>
 					<div class="line2"></div>
@@ -1326,7 +1317,7 @@
 				<div class="about-wrapper dark-item">
 					<div class="about-card dark-item anim-el anim-up">
 						<div class="about-content">
-							<div class="about-text">
+							<div class="about-text dark-item">
 								<!-- <img src="./img/IMG_6401.png" alt="Profile of Nicholas Gould" /> -->
 								<h2 class="dark-item">About Me</h2>
 								<p>
@@ -1336,13 +1327,7 @@
 									technologies.
 								</p>
 							</div>
-							<div class="about-image">
-								<!-- <img
-									class="nicholas-profile"
-									src="./img/IMG_1399.jpg"
-									alt="Nicholas in front of talley student union at NC State"
-								/> -->
-							</div>
+							<div class="about-image"></div>
 						</div>
 					</div>
 				</div>
