--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=7" />
 		<link rel="stylesheet" href="./style/main.css" />
 		<link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="./img/IOS 180.png" />
 		<title>Nicholas Gould</title>
 	</head>
 	<body>
@@ -14,27 +15,7 @@
 			<div class="nav-header">
 				<div class="appearance-toggle dark-item">
 					<div class="dark-bg"></div>
-					<i class="fas fa-moon fa-2x"></i>
-					<!-- <svg
-						xmlns="http://www.w3.org/2000/svg"
-						width="30"
-						height="30"
-						viewBox="0 0 30 30"
-					>
-						<path
-							id="toggle-bg"
-							class="dark-item"
-							d="M15,0A15,15,0,1,1,0,15,15,15,0,0,1,15,0Z"
-							fill="#fff"
-						/>
-						<path
-							class="dark-item"
-							id="toggle-moon"
-							d="M18.846,16.436c-.119,0-.239.008-.358.008a7.252,7.252,0,0,1-5.216-2.2,7.494,7.494,0,0,1-2.16-5.3,7.588,7.588,0,0,1,.72-3.237,10.722,10.722,0,0,1,.559-.963.162.162,0,0,0-.16-.251,7.956,7.956,0,0,0,1.213,15.8,7.755,7.755,0,0,0,5.961-2.8,7.514,7.514,0,0,0,.675-.9.166.166,0,0,0-.169-.251A7.025,7.025,0,0,1,18.846,16.436Z"
-							transform="translate(1.985 2.605)"
-							fill="#272b2e"
-						/>
-					</svg> -->
+					<i class="fas fa-moon fa-lg"></i>
 				</div>
 				<a href="./index.html" id="logo"
 					><svg
@@ -232,27 +213,6 @@
 							Western Piedmont Community College.
 						</p>
 					</div>
-					<!-- <svg
-						id="work-bg-circle"
-						xmlns="http://www.w3.org/2000/svg"
-						width="382.719"
-						height="380.889"
-						viewBox="0 0 382.719 380.889"
-					>
-						<g transform="translate(382.719 141) rotate(120)">
-							<circle
-								cx="135.5"
-								cy="135.5"
-								r="135.5"
-								transform="translate(6 11)"
-								fill="#5dd98a"
-							/>
-							<g fill="none" stroke="#000" stroke-width="3">
-								<circle cx="135.5" cy="135.5" r="135.5" stroke="none" />
-								<circle cx="135.5" cy="135.5" r="134" fill="none" />
-							</g>
-						</g>
-					</svg> -->
 					<div class="work-card dark-item anim-el anim-right">
 						<div class="work-card-header">
 							<img src="./img/BNSTLK_logo.svg" alt="Focus Point Visuals Logo" />
@@ -261,11 +221,11 @@
 						<h3>Tour Guide (2017-2019)</h3>
 						<!-- <button class="read-more">Read More</button> -->
 						<p>
-							Required effective communication and leadership skills to guide a
-							group of up to 12 guests safely through a zipline course upwards
-							of 60ft in the air. Guides are responsible for making sure all
-							guests follow necessary safety precautions to ensure no one gets
-							hurt.
+							At Beanstalk I learned effective communication and leadership
+							skills to guide a group of up to 12 guests safely through a
+							zipline course upwards of 60ft in the air. As guides we were
+							responsible for making sure all guests follow necessary safety
+							precautions and to ensure no one gets hurt.
 						</p>
 					</div>
 				</div>
