--- a/index.html
+++ b/index.html
@@ -672,51 +672,60 @@
 						</p>
 					</div>
 					<div class="photo-grid">
-						<img
-							src="./img/photo_gallery/IMG_8512.jpg"
-							alt="quiet-wave clothing shoot"
-							class="img1 anim-el anim-right"
-						/>
-						<img
-							src="./img/photo_gallery/IMG_1580.jpg"
-							alt="grad-student at NCSU"
-							class="img2 anim-el anim-up"
-						/>
-						<img
-							src="./img/photo_gallery/IMG_1383.jpg"
-							alt="student in front of talley student union"
-							class="img3 anim-el anim-right"
-						/>
-						<img
-							src="./img/photo_gallery/IMG_3711.jpg"
-							alt="landscape of a spillway in north carolina"
-							class="img4 anim-el anim-up"
-						/>
-						<img
-							src="./img/photo_gallery/IMG_7155.jpg"
-							alt="Dog in the snow"
-							class="img5 anim-el anim-right"
-						/>
-						<img
-							src="./img/photo_gallery/IMG_9704.jpg"
-							alt="boy in the woods"
-							class="img6 anim-el anim-up"
-						/>
-						<img
-							src="./img/photo_gallery/IMG_1146.jpg"
-							alt="model on traintracks"
-							class="img7 anim-el anim-left"
-						/>
-						<img
-							src="./img/photo_gallery/IMG_2077-Edit.jpg"
-							alt="backlit model"
-							class="img8 anim-el anim-up"
-						/>
-						<img
-							src="./img/photo_gallery/IMG_3653.jpg"
-							alt="sunset on lake james"
-							class="img9 anim-el anim-left"
-						/>
+						<div class="img1 anim-el anim-right">
+							<img
+								src="./img/photo_gallery/IMG_8512.jpg"
+								alt="quiet-wave clothing shoot"
+							/>
+						</div>
+						<div class="img2 anim-el anim-up">
+							<img
+								src="./img/photo_gallery/IMG_1580.jpg"
+								alt="grad-student at NCSU"
+							/>
+						</div>
+						<div class="img3 anim-el anim-right">
+							<img
+								src="./img/photo_gallery/IMG_1383.jpg"
+								alt="student in front of talley student union"
+							/>
+						</div>
+						<div class="img4 anim-el anim-up">
+							<img
+								src="./img/photo_gallery/IMG_3711.jpg"
+								alt="landscape of a spillway in north carolina"
+							/>
+						</div>
+						<div class="img5 anim-el anim-right">
+							<img
+								src="./img/photo_gallery/IMG_7155.jpg"
+								alt="Dog in the snow"
+							/>
+						</div>
+						<div class="img6 anim-el anim-up">
+							<img
+								src="./img/photo_gallery/IMG_9704.jpg"
+								alt="boy in the woods"
+							/>
+						</div>
+						<div class="img7 anim-el anim-left">
+							<img
+								src="./img/photo_gallery/IMG_1146.jpg	"
+								alt="model on traintracks"
+							/>
+						</div>
+						<div class="img8 anim-el anim-up">
+							<img
+								src="./img/photo_gallery/IMG_2077-Edit.jpg"
+								alt="backlit model"
+							/>
+						</div>
+						<div class="img9 anim-el anim-left">
+							<img
+								src="./img/photo_gallery/IMG_3653.jpg"
+								alt="sunset on lake james"
+							/>
+						</div>
 					</div>
 				</div>
 			</section>
