--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="" />
+		<meta
+			name="description"
+			content="Nicholas Gould | Front-End Development + Design"
+		/>
 		<meta http-equiv="X-UA-Compatible" content="IE=7" />
 		<link rel="stylesheet" href="./style/main.css" />
 		<link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
@@ -641,7 +644,7 @@
 								<li>Premiere Pro</li>
 								<li>After Effects</li>
 								<li>Cinematography</li>
-								<li>Lighting</li>
+								<li>Storytelling</li>
 							</ul>
 						</div>
 					</div>
