--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		/>
 		<meta http-equiv="X-UA-Compatible" content="IE=7" />
 		<link rel="stylesheet" href="./style/main.css" />
-		<link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
+		<link rel="shortcut icon" href="./img/NG_favicon.png" type="image/x-icon" />
 		<link rel="apple-touch-icon" href="./img/IOS_180.png" />
 		<title>Nicholas Gould</title>
 	</head>
